@@ -12,6 +12,7 @@ Changes:
 - Load zfs.ko and opensolaris.ko from loader.
 - Use AES-NI in geli by default.
 - Rewrite gui.js with jQuery.
+- Add HAST + iSCSI target service.
 - Add HAST service WebGUI.
 - Add upgrade method from old system.
 - Add reload iSCSI target.
